tests/fsharp/typeProviders/negTests/neg3.bsl

neg3.fsx(1,1,1,77): parse error FS3052: The type provider 'Provider.EvilGeneratedProviderThatReturnsAGeneratedTypeNotNestedInAnErasedType' returned a non-nested generated type. Generated types must be nested types of an enclosing erased type.

neg3.fsx(1,1,1,77): parse error FS3020: One or more errors seen during provided type setup
