tests/fsharp/typeProviders/negTests/neg3.fsx
#r "provider_EVIL_PROVIDER_ReturnsAGeneratedTypeNotNestedInAnErasedType.dll"


type GeneratedType = FSharp.EvilGeneratedProviderThatReturnsAGeneratedTypeNotNestedInAnErasedType.TheGeneratedType


